update from NLP modules

--- a/AI-102-AIEngineer/20-ocr/Python/read-text/.env
+++ b/AI-102-AIEngineer/20-ocr/Python/read-text/.env
@@ -1,2 +1,2 @@
-COG_SERVICE_ENDPOINT=your_cognitive_services_endpoint
-COG_SERVICE_KEY=your_cognitive_services_key
+COG_SERVICE_ENDPOINT=https://cs1-36408297.cognitiveservices.azure.com/
+COG_SERVICE_KEY=9be58914fc8a4cef8e49bd3d99ca2396
