--- a/mslearn-ai-vision/Labfiles/05-ocr/Python/read-text/.env
+++ b/mslearn-ai-vision/Labfiles/05-ocr/Python/read-text/.env
@@ -1,2 +1,2 @@
-AI_SERVICE_ENDPOINT=your_azure_ai_services_endpoint
-AI_SERVICE_KEY=your_azure_ai_services_key
+AI_SERVICE_ENDPOINT=https://training-aiservices-jp-001.cognitiveservices.azure.com/
+AI_SERVICE_KEY=7ed8ef9572c742289edc171f603e8d0c
